# Motorsport-Trip-Finder

./: .gitignore  README.md  main.py  pyproject.toml
aws_ops/: __init__.py  s3.py
configs/: __init__.py  models.py  settings.py
data_ingestion/apis/pirate_weather/: forecast.py
data_ingestion/apis/pirate_weather/models/: forecast_models.py
data_ingestion/models/: custom_dtypes.py  geography.py
data_ingestion/scrapers/: scraper_protocol.py
helpers/general/: __init__.py  dates.py
helpers/network/bot_detection/: __init__.py  avoid_bot_detection.py
helpers/network/bot_detection/models/: request_proxy.py  ua_filters.py
