[project]
name = "motorsport-trip-finder"
version = "0.1.0"
description = "A tool to find motorsport events and trips."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fake-useragent>=2.0.3",
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.37",
    "stamina>=24.3.0",
    "swiftshadow>=2.0.1",
]
